--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -98,29 +98,32 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url 'account_logout' %}"><i
                                             class="fa-solid fa-user"></i> Logout</a></li>
-                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"><i
-                                            class="fa-solid fa-user-plus"></i> Change Password</a></li>
+                                <li><a class="dropdown-item" href="{% url 'account_change_password' %}"> Change
+                                        Password</a></li>
+                                <li><a class="dropdown-item" href="{% url 'excursion-bookings' %}"> Excursion
+                                        Bookings</a></li>
                             </ul>
                         </li>
 
                         {% endif %}
                         <!-- Contacts -->
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i> Contact</a>
+                            <a class="nav-link" href="{% url 'contact' %}"><i class="fa-solid fa-envelope"></i>
+                                Contact</a>
                         </li>
                     </div>
 
-                      <!-- cart -->
-                      <li class="nav-item cart">
+                    <!-- cart -->
+                    <li class="nav-item cart">
                         <a class="nav-link" href="{% url 'cart' %}">
                             <button type="button" class="btn my_hover sear-btn btn-outline-secondary position-relative">
                                 <i class="fa-solid fa-cart-shopping"></i>
-                                  {% if total %}
-                                  £{{total | floatformat:2}}
-                                  {% else %}
-                                  £0.00
-                                  {% endif %}
-                              </button>
+                                {% if total %}
+                                £{{total | floatformat:2}}
+                                {% else %}
+                                £0.00
+                                {% endif %}
+                            </button>
                         </a>
                     </li>
                 </ul>
@@ -184,9 +187,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
-     <!-- jQuery -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.js"
-    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- Local Javascript -->
     <script src="{% static 'js/script.js' %}"></script>
 </body>
