--- a/templates/home/customer_booking.html
+++ b/templates/home/customer_booking.html
@@ -2,7 +2,88 @@
 {% load static %}
 
 {% block content %}
-<section class="contact_wrapper">
-    <h6 class="contact_word">Bookings</h6>
+<section>
+     {% if today_orders or previous_orders %}
+
+    <h1 class="text-center mt-5">Your Excursion Bookings</h1>
+
+       <!-- today bookings -->
+       {% if today_orders %}
+    <h4 class="text-center mt-5">Today Bookings</h4>
+    <div class="table_wrapper table-responsive">
+        <table class="data_table">
+            <tr>
+                <th>Image</th>
+                <th>Title</th>
+                <th>Excursion Date</th>
+                <th>Adult Quantity</th>
+                {% if order.child_qty%}
+                <th>Child Quantity</th>
+                {% endif %}
+                <th>Pick up at</th>
+                <th>Bk.Number</th>
+                <th>Total</th>
+            </tr>
+
+            {% for order in today_orders %}
+            <tr>
+                <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
+                <td>{{order.excursion_name |slice:":25"|title}}</td>
+                <td>{{order.excursion_date}}</td>
+                <td>{{order.adult_qty}}</td>
+                {% if order.child_qty%}
+                <td>{{order.child_qty}}</td>
+                {% endif %}
+                <td>{{order.place_pickup}}</td>
+                <td>{{order.order_number}}</td>
+                <td>{{order.subTotal}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    {% endif %}
+
+    <!-- All previous bookings -->
+    {% if previous_orders %}
+    <h4 class="text-center mt-5">Previous Bookings</h4>
+
+    <div class="table_wrapper table-responsive">
+        <table class="data_table">
+            <tr>
+                <th>Image</th>
+                <th>Title</th>
+                <th>Excursion Date</th>
+                <th>Adult Quantity</th>
+                {% if order.child_qty%}
+                <th>Child Quantity</th>
+                {% endif %}
+                <th>Pick up at</th>
+                <th>Bk.Number</th>
+                <th>Total</th>
+            </tr>
+
+            {% for order in previous_orders %}
+            <tr>
+                <td><img src="{{order.image}}" alt="{{order.excursion_name}}" style="width:75px"></td>
+                <td>{{order.excursion_name |slice:":25"|title}}</td>
+                <td>{{order.excursion_date}}</td>
+                <td>{{order.adult_qty}}</td>
+                {% if order.child_qty%}
+                <td>{{order.child_qty}}</td>
+                {% endif %}
+                <td>{{order.place_pickup}}</td>
+                <td>{{order.order_number}}</td>
+                <td>{{order.subTotal}}</td>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+    {% endif %}
+    {% else %}
+    <h1 class="text-center mt-5">You do not have any bookings yet</h1>
+    <div class="text-center"><a class="user_button_sm my_hover btn center" href="{% url 'excursions' %}"><i class="fa-solid fa-cart-shopping"></i> Go shopping</a>
+    </div>
+    {% endif %}
 </section>
+
 {% endblock content %}
