--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -79,6 +79,58 @@ body {
     color: var(--white);
 }
 
+
+/* -------------------------------------------------------------------- successful payment page */
+
+
+.payment_header {
+    background-color: var(--orange-pantone);
+    padding: 20px;
+    border-radius: 20px 20px 0px 0px;
+}
+
+.check {
+    margin: 0px auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    background: #fff;
+    text-align: center;
+}
+
+.check i {
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 30px;
+}
+
+.content {
+    text-align: center;
+    background-color: white;
+    padding: 20px;
+}
+
+.content a {
+    width: 200px;
+    height: 35px;
+    color: #fff;
+    border-radius: 30px;
+    padding: 5px 10px;
+    background: rgba(255, 102, 0, 1);
+    transition: all ease-in-out 0.3s;
+}
+
+.content a:hover {
+    text-decoration: none;
+    background: #000;
+}
+
+.content h1 {
+    font-size: 25px;
+    padding-top: 25px;
+}
+
+
 /* -------------------------------------------------------------------- Admin section */
 
 .card-admin-wrapper {
@@ -328,6 +380,10 @@ body {
     color: var(--orange-pantone)
 }
 
+.bg-site-color {
+    background-color: var(--orange-pantone);
+}
+
 .cart-item-detail {
     background-color: var(--white);
     border-radius: 10px;
@@ -406,6 +462,31 @@ body {
     border: 2px solid var(--orange-pantone);
 }
 
+.visa {
+    color: navy;
+}
+
+.discover {
+    color: orange;
+}
+
+.amex {
+    color: blue;
+}
+
+.mastercard {
+    color: red;
+}
+
+.visa,
+.discover,
+.amex,
+.mastercard {
+    font-size: 35px;
+}
+
+
+
 /* ----------------Animation for home*/
 @keyframes typing {
     0% {
@@ -426,9 +507,41 @@ body {
     width: 200px;
 }
 
+/* --------------------------------------------------------------------- checkout stripe */
+
+.StripeElement,
+.stripe-style-input {
+    box-sizing: border-box;
+    height: 40px;
+    padding: 10px 12px;
+    border: 1px solid transparent;
+    border-radius: 0px;
+    background-color: white;
+    box-shadow: 0 1px 3px 0 #e6ebf1;
+    -webkit-transition: box-shadow 150ms ease;
+    transition: box-shadow 150ms ease;
+}
+
+.StripeElement--focus,
+.stripe-style-input:focus,
+.stripe-style-input:active {
+    box-shadow: 0 1px 3px 0 #cfd7df;
+}
+
+.StripeElement--webkit-autofill {
+    background-color: #fefde5 !important;
+}
+
+.stripe-style-input::placeholder {
+    color: #aab7c4;
+}
 
 
-
+#card-element {
+    border: 1px solid #ced4da;
+    padding: .375rem .75rem;
+    border-radius: .375rem;
+}
 
 /* ------------------------------------------------------------------search classes */
 
@@ -910,7 +1023,7 @@ textarea::placeholder {
     .home-banner h2 {
         font-size: 100px;
     }
-    
+
 
     .overview {
         width: 70%;
@@ -1202,7 +1315,7 @@ textarea::placeholder {
 
     .cart-price-summary {
         width: 100%;
-    } 
+    }
 
 
 
