modified subtotal filed in checkout model,views, and templates

--- a/templates/administrator/administrator.html
+++ b/templates/administrator/administrator.html
@@ -79,7 +79,7 @@
                         <td>{{order.cellphone_number}}</td>
                         <td>{{order.customer_email}}</td>
                         <td>{{order.full_name}}</td>
-                        <td>£{{order.subTotal}}</td>
+                        <td>£{{order.subtotal}}</td>
                     </tr>
                     {% endfor %}
                 </table>
@@ -120,7 +120,7 @@
                         <td>{{order.cellphone_number}}</td>
                         <td>{{order.customer_email}}</td>
                         <td>{{order.full_name}}</td>
-                        <td>£{{order.subTotal}}</td>
+                        <td>£{{order.subtotal}}</td>
                     </tr>
                     {% endfor %}
                 </table>
@@ -162,7 +162,7 @@
                         <td>{{order.cellphone_number}}</td>
                         <td>{{order.customer_email}}</td>
                         <td>{{order.full_name}}</td>
-                        <td>£{{order.subTotal}}</td>
+                        <td>£{{order.subtotal}}</td>
                     </tr>
                     {% endfor %}
                 </table>
