Add view cart for rentall app, template, urland rename excursion cart

--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -115,7 +115,7 @@
 
                     <!-- cart -->
                     <li class="nav-item cart">
-                        <a class="nav-link" href="{% url 'cart' %}">
+                        <a class="nav-link" href="{% url 'excursion-cart' %}">
                             <button type="button" class="btn my_hover sear-btn btn-outline-secondary position-relative">
                                 <i class="fa-solid fa-cart-shopping"></i>
                                 {% if total %}
