--- a/templates/rentals/rental_details.html
+++ b/templates/rentals/rental_details.html
@@ -42,6 +42,9 @@
             </div>
             <!-- item details aside -->
             <div class="item-detail card">
+                {% if cart_error != '' %}
+                 {{cart_error}}
+                 {% endif %}
                 <form class="form" action="{% url 'add_rental' rentals.id %}" method="POST">
                     {% csrf_token %}
 
@@ -53,7 +56,7 @@
                         <!-- check-In date -->
                         <div class="form-group mt-3">
                             <label for="check-in">CHECK-IN</label>
-                            <input type="date" class="form-control" id="check-in" name="check-in" required>
+                            <input type="date" class="form-control" id="check-in" name="check_in" required>
                         </div>
 
                         <!-- check-In date -->
