Add all the detail for rentals_cart

--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -122,8 +122,8 @@
                         <a class="nav-link" href="{% url 'rental-cart' %}">
                             <button type="button" class="btn my_hover sear-btn btn-outline-secondary position-relative">
                                 <i class="fa-solid fa-cart-shopping"></i>
-                                {% if total %}
-                                £{{total | floatformat:2}}
+                                {% if rental_cart_total %}
+                                £{{rental_cart_total | floatformat:2}}
                                 {% else %}
                                 £0.00
                                 {% endif %}
