--- a/templates/cart/rentals_cart.html
+++ b/templates/cart/rentals_cart.html
@@ -12,13 +12,20 @@
                 <hr>
             </div>
         </div>
-        <!-- flass success message -->
+        
+         <!-- flash messages -->
         <div class="message mt-3">
             {% if messages %}
             {% for message in messages %}
+            {% if message.tags == "success" %}
             <div class="alert alert-success" role="alert">
                 {{message}}
             </div>
+            {% else %}
+            <div class="alert alert-danger" role="alert">
+                {{message}}
+            </div>
+            {% endif%}
             {% endfor %}
             {% endif %}
         </div>
