--- a/templates/excursions/excursions.html
+++ b/templates/excursions/excursions.html
@@ -5,13 +5,20 @@
 
 <section>
     <h1 class="text-center mt-5"> All Excursions</h1>
-
+    
+    <!-- flash messages -->
     <div class="message mt-3">
         {% if messages %}
         {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
+        </div>
+        {% else %}
         <div class="alert alert-danger" role="alert">
             {{message}}
         </div>
+        {% endif%}
         {% endfor %}
         {% endif %}
     </div>
