--- a/templates/excursions/excursions_base.html
+++ b/templates/excursions/excursions_base.html
@@ -142,6 +142,22 @@
             </div>
         </div>
     </nav>
+       <!-- flash messages -->
+       <div class="message mt-3">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
+        </div>
+        {% else %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif%}
+        {% endfor %}
+        {% endif %}
+    </div>
 
     <main>
         {% block content %}
