--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -148,7 +148,22 @@
             </div>
         </div>
     </nav>
-
+        <!-- flash messages -->
+        <div class="message mt-3">
+            {% if messages %}
+            {% for message in messages %}
+            {% if message.tags == "success" %}
+            <div class="alert alert-success" role="alert">
+                {{message}}
+            </div>
+            {% else %}
+            <div class="alert alert-danger" role="alert">
+                {{message}}
+            </div>
+            {% endif%}
+            {% endfor %}
+            {% endif %}
+        </div>
     <main>
         {% block content %}
         <!-- Main Content -->
