--- a/templates/cart/rentals_cart.html
+++ b/templates/cart/rentals_cart.html
@@ -69,7 +69,7 @@
                                 <td><button type="submit" class="update-cart-btn"><i
                                             class="fa-solid fa-pen-to-square"></i>Update</button></td>
 
-                                <td><a class="remove-item" data-excursion_id="{{item.item_id}}"> <i
+                                <td><a class="remove-item" data-rental_id="{{item.item_id}}"> <i
                                             class="fa-solid fa-rectangle-xmark cart-icon-x"></i></a></td>
 
                                 <!-- hidden input to get the url-->
@@ -126,5 +126,5 @@
 
     </div>
 </section>
-{% include 'excursions/includes/delete_cart_item_script.html' %}
+{% include 'rentals/includes/delete_cart_item_script.html' %}
 {% endblock content %}
