--- a/templates/rentals/rentals_base.html
+++ b/templates/rentals/rentals_base.html
@@ -148,22 +148,22 @@
             </div>
         </div>
     </nav>
-        <!-- flash messages -->
-        <div class="message mt-3">
-            {% if messages %}
-            {% for message in messages %}
-            {% if message.tags == "success" %}
-            <div class="alert alert-success" role="alert">
-                {{message}}
-            </div>
-            {% else %}
-            <div class="alert alert-danger" role="alert">
-                {{message}}
-            </div>
-            {% endif%}
-            {% endfor %}
-            {% endif %}
+    <!-- flash messages -->
+    <div class="message mt-3">
+        {% if messages %}
+        {% for message in messages %}
+        {% if message.tags == "success" %}
+        <div class="alert alert-success" role="alert">
+            {{message}}
         </div>
+        {% else %}
+        <div class="alert alert-danger" role="alert">
+            {{message}}
+        </div>
+        {% endif%}
+        {% endfor %}
+        {% endif %}
+    </div>
     <main>
         {% block content %}
         <!-- Main Content -->
@@ -208,6 +208,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
     <!-- Local Javascript -->
     <script src="{% static 'js/script.js' %}"></script>
 
